[package]
name = "nanotsc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = {version = "0.29.4", features = ["transpiling"]}

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1